# spot-planning-demo

./: .gitignore  .pylintrc  LICENSE  README.md  config.json  pyproject.toml
examples/: basic_simulation.py
graph_nav_maps/prpl_fwing_test_map/: graph
graph_nav_maps/prpl_fwing_test_map/edge_snapshots/: edge_snapshot_id_barky-duck-Qlyyn6obgc0VxDmDouRAgw==  edge_snapshot_id_bossy-lamb-IhbPkm2mqcmt6RF4GeufIQ==  edge_snapshot_id_chubby-mayfly-W5jp9YcNPKnCjhBcxd1MMw==  edge_snapshot_id_crispy-walrus-0lZohXM+3MkSuxnETGS4.A==  edge_snapshot_id_inlaid-grub-dM2YHE6tokm1rhyeuTGH6A==  edge_snapshot_id_jailed-wasp-SO5ia0pMfA5fhe9EPJ+jEg==  edge_snapshot_id_kookie-nasua-uRJzMTkB235VK1MzDhJdwQ==  edge_snapshot_id_legged-thrush-0Id9zGrrMT6rJfNapVFk8A==  edge_snapshot_id_rainy-heron-VELf2vVC8cV0sIjX.CjHqQ==  edge_snapshot_id_scarey-taipan-IJY4u.tFtcdq+XCY2eeMHg==  edge_snapshot_id_tacit-cattle-cX.wQthYYL0uWcX.R34KCw==
graph_nav_maps/prpl_fwing_test_map/waypoint_snapshots/: snapshot_anti-cur-q9rEIIuf92HAD930WLnPTQ==  snapshot_botchy-cobra-JfYaf1BdsGYOmj4MIB5.KQ==  snapshot_cymose-drum-SHrnRkofpohqToBrfyV+Ww==  snapshot_daft-mite-h30NXu7nwEG.L9chAen5Kg==  snapshot_finer-monkey-6N59Kzb9Y9VqsboZ+5Q1IA==  snapshot_mass-chimp-2ePJdqNcCrncWEy89YNhZw==  snapshot_monied-manx-7++r4o6rUdtFwVosj8N2kg==  snapshot_peanut-fowl-u3PTomRtAgnOkS9GSHrrYw==  snapshot_runny-merino-BY6S7U+xzAxkDV1K.+IrhQ==  snapshot_squab-crow-xPsA5qtn8Tumaf.FMwdenw==  snapshot_vestal-kudu-WoIh3NzWglIL6zB+yQcZNg==
scripts/: close_gripper.py  open_gripper.py  stow_arm.py
src/spot_planning_demo/: structs.py  utils.py
src/spot_planning_demo/envs/: spot_pybullet_env.py  spot_real_env.py  spot_sim_viz_wrapper.py
src/spot_planning_demo/spot_utils/: utils.py  (+1 more)
tests/: conftest.py  test_utils.py
tests/envs/: test_spot_pybullet_env.py  test_spot_real_env.py
(+6 files in other folders)
